--- a/Module3-MachineLearning/Source/Ex2/Begin/src/PartsUnlimitedWebsite/Views/Store/Details.cshtml
+++ b/Module3-MachineLearning/Source/Ex2/Begin/src/PartsUnlimitedWebsite/Views/Store/Details.cshtml
@@ -66,7 +66,7 @@
         </div>
     </section>
 
-    @*Exercise 2, Task 2. Insert the following snippet here: MachineLearning - DetailsView*@
+    <!-- Insert the code snippet "MachineLearning - DetailsView" below -->
 
     <section class="section-alt">
     @await Component.InvokeAsync("Recommendations", Model)
