--- a/Module3-MachineLearning/Source/Ex2/End/src/PartsUnlimitedWebsite/Views/Store/Details.cshtml
+++ b/Module3-MachineLearning/Source/Ex2/End/src/PartsUnlimitedWebsite/Views/Store/Details.cshtml
@@ -66,27 +66,29 @@
         </div>
     </section>
 
-@using (Html.BeginForm("Feedback", "Store"))
-{
-    <section>
-        <h2>Feedback</h2>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 wide-col-padding no-gutter-xs">
-                <div class="col-xs-12  no-gutter-sm">
-                    <p>We'd love to know your thoughts on this product</p>
-                </div>
-                <div class="form-group col-sm-8 col-md-10 no-gutter-sm">
-                    @Html.TextBox("feedback", null, new { @class = "form-control", placeholder = "Feedback" })                    
-                </div>
+    <!-- Insert the code snippet "MachineLearning - DetailsView" below -->
+    @using (Html.BeginForm("Feedback", "Store"))
+    {
+        <section>
+            <h2>Feedback</h2>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 wide-col-padding no-gutter-xs">
+                    <div class="col-xs-12  no-gutter-sm">
+                        <p>We'd love to know your thoughts on this product</p>
+                    </div>
+                    <div class="form-group col-sm-8 col-md-10 no-gutter-sm">
+                        @Html.TextBox("feedback", null, new { @class = "form-control", placeholder = "Feedback" })
+                    </div>
 
-                <div class="col-md-12 no-gutter-sm">
-                    <input id="feedback-button" type="submit" value="Submit Feedback" />
-                </div>
+                    <div class="col-md-12 no-gutter-sm">
+                        <input id="feedback-button" type="submit" value="Submit Feedback" />
+                    </div>
 
+                </div>
             </div>
-        </div>
-    </section>
-}
+        </section>
+    }
+
     <section class="section-alt">
     @await Component.InvokeAsync("Recommendations", Model)
     </section>
