--- a/Module3-MachineLearning/Source/Ex2/End/src/PartsUnlimitedWebsite/Views/Store/Feedback.cshtml
+++ b/Module3-MachineLearning/Source/Ex2/End/src/PartsUnlimitedWebsite/Views/Store/Feedback.cshtml
@@ -1,4 +1,5 @@
-﻿@using PartsUnlimited
+﻿<!-- Insert the code snippet "MachineLearning - FeedbackView" below-->
+@using PartsUnlimited
 @model PartsUnlimited.Models.Feedback
 
 @{
@@ -59,7 +60,7 @@
                     <ul>
                         @if (Model.KeyPhrases != null)
                         {
-                            @foreach (var phrase in Model.KeyPhrases.ToList())
+                            foreach (var phrase in Model.KeyPhrases.ToList())
                             {
                                 <li>@phrase</li>
                             }
